Changed moveCharacter and setPos, Character now can be multi tiled. Started documenting code