@@ -14,10 +14,7 @@ public class Hero extends Character {
 	public Hero(int level, boolean armed){
 		super((level == 0) ? 1 : 8 ,(level == 0) ? 1 : 1 );
 		this.representation = (armed == false) ? "H" : "A";
-			this.is_armed=armed;
-	
-			
-		
+		this.is_armed=armed;
 	}
 
 	public String toString(){
@@ -27,25 +24,26 @@ public class Hero extends Character {
 			return this.representation;
 	}
 
-	public Pair<Integer, Integer> moveCharacter(int MAP_SIZE){
-		return new Pair<Integer,Integer>(-1,-1);
+	public ArrayList< Pair<Integer, Integer> > moveCharacter(int MAP_SIZE){
+		return new ArrayList<Pair<Integer,Integer> >();
 	}
 
-	public Pair<Integer,Integer> moveCharacter(int MAP_SIZE,int dir){
-		Pair<Integer,Integer> temp = (Pair<Integer,Integer>)this.position.clone();
+	public ArrayList< Pair<Integer,Integer> > moveCharacter(int MAP_SIZE,int dir){
+		ArrayList< Pair<Integer,Integer> > temp = (ArrayList< Pair<Integer,Integer> >)this.position.clone();
 		
-		if (dir == 1 && temp.getSecond().intValue()+1 < MAP_SIZE)//move right
-			temp.setSecond(temp.getSecond().intValue()+1);
-		else if (dir == 2 && temp.getSecond().intValue()-1 >= 0)//move left
-			temp.setSecond(temp.getSecond().intValue()-1);
-		else if (dir == 3 && temp.getFirst().intValue()+1 < MAP_SIZE)//move down
-			temp.setFirst(temp.getFirst().intValue()+1);
-		else if (dir == 4 && temp.getFirst().intValue()-1 >= 0)//move up
-			temp.setFirst(temp.getFirst().intValue()-1);
+		if (dir == 1 && temp.get(0).getSecond().intValue()+1 < MAP_SIZE)//move right
+			temp.get(0).setSecond(temp.get(0).getSecond().intValue()+1);
+		else if (dir == 2 && temp.get(0).getSecond().intValue()-1 >= 0)//move left
+			temp.get(0).setSecond(temp.get(0).getSecond().intValue()-1);
+		else if (dir == 3 && temp.get(0).getFirst().intValue()+1 < MAP_SIZE)//move down
+			temp.get(0).setFirst(temp.get(0).getFirst().intValue()+1);
+		else if (dir == 4 && temp.get(0).getFirst().intValue()-1 >= 0)//move up
+			temp.get(0).setFirst(temp.get(0).getFirst().intValue()-1);
 
 		return temp;
 	}	
 
+	
 	public void setKey(boolean val){
 		this.has_key = val;
 	}
@@ -56,7 +54,7 @@ public class Hero extends Character {
 	
 	public ArrayList< Pair< Pair<Integer,Integer> ,String> > getPrintable(){
 		ArrayList< Pair< Pair<Integer,Integer> ,String> > temp = new ArrayList< Pair< Pair<Integer,Integer> ,String> >(1);
-		temp.add( new Pair< Pair<Integer,Integer > ,String>( this.position,this.representation));
+		temp.add( new Pair< Pair<Integer,Integer > ,String>( this.position.get(0) ,this.representation));
 		
 		return temp;
 	}
@@ -71,6 +69,11 @@ public class Hero extends Character {
 	
 	public void setArmed(boolean armed){
 		this.is_armed=armed;
+	}
+
+	@Override
+	public ArrayList<Pair<Integer, Integer>> getGameOverPos() {
+		return null;
 	}
 
 }
